Изменена загрузка МТФ и Инф, удаление заявки в сервис, порт прибытия в посадочном талоне

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,7 +14,7 @@ services:
 
     cruise:
         class: CruiseBundle\Service\Cruise
-        arguments: ['@doctrine']
+        arguments: ['@doctrine','@mailer']
 
     num2str:
         class: CruiseBundle\Service\NumToString
