Отчёт агента пока только у менеджера

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -16,6 +16,10 @@ services:
         class: CruiseBundle\Service\Cruise
         arguments: ['@doctrine','@mailer']
 
+    report_agent:
+        class: CruiseBundle\Service\ReportAgent
+        arguments: ['@doctrine','@phpexcel','@cruise','@num2str']
+
     num2str:
         class: CruiseBundle\Service\NumToString
 
